[metadata]
name = patchSeq
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/patchSeq.py
description = A CLI tool for rewriting history by splitting, merging, reordering patches sequences
long_description = file: ReadMe.md
keywords = python, git, CI, bleeding edge, 
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
include_package_data = True
setup_requires = setuptools_scm @ git+https://github.com/pypa/setuptools_scm.git
install_requires = 
	fsutilz @ https://github.com/KOLANICH/fsutilz  # Unlicense
	unidiff @ https://github.com/matiasb/python-unidiff  # MIT

[options.packages.find]
include =
	patchSeq
	patchSeq.*
	patchSeq.passes.*
	patchSeq.utils.*
	patchSeq.keepingStrategies.*

[options.entry_points]
console_scripts = 
	patchSeq=patchSeq.__main__:PatchSeqCLI.run


[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
